--- a/Src/styles.css
+++ b/Src/styles.css
@@ -75,8 +75,8 @@ body {
   color: #90c;
 }
 #content #boxes {
-    float: left;
-    width: 600px;
+  float: left;
+  width: 710px;
 }
 
 #content #boxes #free-sms,
@@ -91,6 +91,7 @@ body {
   font-weight: bold;
   float: left;
   margin: 20px 30px;
+  line-height: 30px;
 }
 #content #boxes #free-sms a,
 #content #boxes #free-sms a:visited,
@@ -104,8 +105,8 @@ body {
   color: #f60;
 }
 
-#content #fb-page {
-    float: left;
-    padding-top: 25px;
-    margin: 20px 30px;
+#content .fb-page {
+  float: left;
+  padding-top: 25px;
+  margin: 20px 30px;
 }
