--- a/Src/styles.css
+++ b/Src/styles.css
@@ -54,7 +54,7 @@ body {
 
 #content #projects {
   border: 3px solid #f60;
-  width: 244px;
+  width: 15%;
   background: #ff9;
   text-align: center;
   float: left;
@@ -75,8 +75,8 @@ body {
   color: #90c;
 }
 #content #boxes {
+  width: 70%;
   float: left;
-  width: 710px;
 }
 
 #content #boxes #free-sms,
@@ -105,7 +105,8 @@ body {
   color: #f60;
 }
 
-#content .fb-page {
+#content #facebook {
+  width: 15%;
   float: left;
   padding-top: 25px;
   margin: 20px 30px;
