--- a/Src/styles-test.css
+++ b/Src/styles-test.css
@@ -8,7 +8,7 @@
 
 body {
   background-color: #666;
-  color: #333;
+  color: #f0f0f0;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
