--- a/Src/styles-test.css
+++ b/Src/styles-test.css
@@ -69,8 +69,9 @@ header {
   background-color: #FFD700;
   color: #000;
   text-align: center;
+  width: 60%;
   padding: 20px;
-  margin: 20px 0;
+  margin: 20px auto;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -110,6 +111,7 @@ header {
 /* Main content */
 main {
   flex: 1;
+  width: 80%;
   padding: 20px;
 }
 
@@ -118,7 +120,7 @@ main {
   flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
-  width: 84%;
+  width: 100%;
 }
 
 .project-card {
